fixed images not showing in codesandbox

--- a/hots/src/components/Banner/Banner.css
+++ b/hots/src/components/Banner/Banner.css
@@ -75,7 +75,7 @@
   }
 
   .banner {
-    background: url("/images/backgrounds/deathwing-bg.jpg") no-repeat center
+    background: url("/images/Backgrounds/deathwing-bg.jpg") no-repeat center
       center/cover;
   }
 
